# bard-infra

./: .env.example  .gcloudignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CHANGELOG.md  DESIGN.md  HANDOFF.md  JOURNAL.md  PLANS.md  PROJECT_PLAN.md  README.md  ROADMAP.md  RUBRIC.md  TRUST_MODEL.md  TRUST_TEST_PLAN.md  bugs.md  connectivity.md  features.md  pyproject.toml
agent/: Containerfile  Containerfile.cloud  __init__.py  app.py  broker.py  engine.py  entrypoint.sh  main.py  register.py
ansible/: README.md  ansible.cfg  winrm-env.sh
ci/: ci.yml
common/: __init__.py  auth.py  config.py  cors.py  device_auth.py  errors.py  logging.py  metrics.py  name_resolution.py  placement.py  power.py  protocol.py  version.py
contracts/: agent.openapi.yaml  broker-link.schema.json  control-plane.openapi.yaml  enrollment.schema.json  invite.schema.json  plugin-manifest.schema.json  power-profile.schema.yaml  protocol.schema.json  recovery.schema.json  registry.openapi.yaml  router.openapi.yaml  trust.schema.yaml
demo/: .containerignore  .env.example  .gcloudignore  .gitignore  JOURNAL.md  PLANS.md  PLAN_refinery_demo.md  README.md  RUBRIC.md  bugs.md  features.md  pyproject.toml
demo/console/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
demo/console/src/: App.css  App.tsx  api.ts  main.tsx  theme.css  types.ts
demo/console/src/components/: AgentPanel.tsx  FleetView.tsx  InvestigateView.tsx  KpiStrip.tsx  SectionCard.tsx  SelfHealPanel.tsx  SidePanel.tsx  SubgraphCanvas.tsx  TimelineStrip.tsx  TopBar.tsx
demo/console/tests/: console.spec.ts
demo/deploy/: Containerfile  DEPLOY.md  deploy_cloudrun.sh
demo/plans/: DESIGN_industrial_fabric.md  PLAN_fleet_browser.md
demo/refinery/: __init__.py  api.py  fabric.py  faults.py  model.py  registry_client.py  registry_projector.py  selfheal.py  sequencer.py  server.py  sim.py
demo/refinery/topology/: baytown.yaml
demo/scripts/: project_fleet.py  run_local.py
demo/tests/: test_api.py  test_fabric.py  test_faults.py  test_model.py  test_registry_client.py  test_registry_projector.py  test_selfheal.py  test_sequencer.py  test_sim.py
docs/: API_REFERENCE.md  BETA_CHECKLIST.md  MARKETING_SCAN.md  MEMORY.md  PLUGINS.md  POSITIONING.md  RESEARCH_squawk_box_construction.md  REVIEW_2026-06-16.md  RISK_MEMO_relay_auth.md  SECURITY_AND_INTEGRATION.md  SECURITY_AUDIT.md
plans/: PLAN_bardnet_fleet_test.md  PLAN_basement_mvp.md  PLAN_box_demo_sprint.md  PLAN_chris_demo.md  PLAN_client_tabs.md  PLAN_device_identity_mvp.md  PLAN_fleet_facts_console.md  PLAN_loknet.md  PLAN_mesh_decoupling.md  PLAN_mvp.md  PLAN_mvp_sprint.md  PLAN_vllm_router_plugin.md
registry/: __init__.py  app.py  audit_log.py  channel_store.py  device_store.py  fleet.py  main.py  node_facts.py  plugin_store.py  recovery_store.py  store.py
router/: Containerfile.cloud  __init__.py  app.py  broker.py  clients.py  main.py
scripts/: console_registry.py  demo_down.sh  demo_fleet.py  demo_serve.py  demo_up.sh  deploy_loknet_router.sh  fetch_model.ps1  fetch_model.sh  join_server.py  local_fleet_http.py  registry_cors.py  run_agent.ps1  run_agent.sh  run_local_mac.sh  run_vllm_gx10.sh  serve_console_dev.py  smoke_bardnet_fleet.py  smoke_box_demo.py  smoke_broker.py  smoke_console_manage.py  smoke_local.py  smoke_plugin_manage.py  smoke_two_node_infer.py  tailscale_fleet_down.sh  tailscale_fleet_up.sh
terraform/: .gitignore  README.md  comfyui_bullfrog.tf  gpu_test.tf  gpu_test_bullfrog.tf  locals.tf  ollama.tf  ollama_bullfrog.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: fleet_roster.py  test_agent.py  test_bardnet_fleet.py  test_box_ownership.py  test_box_ping.py  test_broker_agent.py  test_broker_manager.py  test_broker_router.py  test_channel_invites.py  test_clients.py  test_config.py  test_console_manage.py  test_contracts.py  test_cors.py  test_coverage_gaps.py  test_device_identity.py  test_e2e.py  test_engine.py  test_fleet.py  test_liveness.py  test_logging.py  test_loknet_register.py  test_metrics.py  test_name_resolution.py  test_node_facts.py  test_nodes_endpoint.py  test_placement.py  test_plugin_manage.py  test_plugin_manifest.py  test_pool.py  test_recovery_escrow.py  test_recovery_store.py  test_register.py  test_registry.py  test_registry_enrollment.py  test_registry_invites.py  test_resolver.py  test_router.py  test_security_pentest.py  (+3 more)
(+179 files in other folders)
