[project]
name = "bard-infra"
dynamic = ["version"]
description = "Bard zero-trust inference fabric — infrastructure layer (router, registry, agent, common, name resolution). Plugins (e.g. the LLM) connect on top."
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pyjwt>=2.8",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "prometheus-client>=0.20,<1.0",
    # The PluginStore validates catalog manifests + operator plugin config against
    # the frozen plugin-manifest contract at RUNTIME (MIT, pure Python, ARM-clean).
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "trustme>=1.1",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Single source of truth for the version: the VERSION file (CLAUDE.md §11).
[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["common", "router", "registry", "agent", "bard_infra"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov --cov-branch --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["."]
# Omit only non-product code (CLAUDE.md §9):
#  - *_main.py uvicorn entrypoints are module-level wiring with no branches.
#  - tests/* is the suite itself; gen_test_certs.py is dev-only TLS tooling.
omit = [
    "router/main.py",
    "registry/main.py",
    "agent/main.py",
    "tests/fakes/gen_test_certs.py",
]
