[project]
name = "refinery-demo"
version = "0.1.0"
description = "bard-infra refinery self-discovery demo — orchestrator (Baytown-modeled, synthetic/public data only)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pyjwt>=2.9",
    "networkx>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["refinery"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=refinery --cov-branch --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
# Glob (not a bare relative path) so the entrypoint is excluded regardless of the
# cwd pytest runs from — a bare "refinery/server.py" only matches when run from demo/.
# server.py is the uvicorn entrypoint + asyncio tick loop, verified by the live
# local-run check, not by unit tests.
omit = ["*/refinery/server.py"]
